    (Bug #328472)
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/seahorse.desktop.in: Corrected desktop files
    (Bug #328457). Patch by Stephane Loeuillet.
    * data/seahorse.schemas.in: Made ASCII armouring the default
    (Bug # 321188)
    * src/seahorse-key-properties.c: Connected export signal to handler
    (Bug # 328469)

2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Make avahi a soft dependency. 
	* configure.in: Fix problem with above commit. 
	See bug #328362
	
2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* Merged changes from seahorse-0-8 branch.

2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* seahorse-key-manager.c: Fixed warnings during Key Manager
	startup. Bug #327657
	
2006-01-22  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Made gedit plugin and panel applet soft
	dependencies.
	* libseahorse/seahorse-context.c: Builds properly without 
	keyserver support.
	
2006-01-16  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * daemon/seahorse-sharing.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-dns-sd.h:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Moved DNS-SD code from 
    libhowl to Avahi. Bug #318707
    
2006-01-15  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-ssh-key.c:
    * plugins/applet/seahorse-applet.c: Bug #327038
    
2006-01-11  Adam Schreiber  <sadam@clemson.edu>

    * help/C/seahorse.xml:
    * libseahorse/seahorse-widget.c:
    * plugins/applet/docs/C/seahorse-applet.xml:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-ssh-key-properties.glade: Help buttons on
    key property windows now work.  The main help brings up the 
    introduction.  There have been wholesale revisions to the help
    docs.
