@@ -10,6 +10,8 @@
     (Bug # 321188)
     * src/seahorse-key-properties.c: Connected export signal to handler
     (Bug # 328469)
+    * libseahorse/seahorse-pgp-key-op.c: Changed g_return_val_if_fail into
+    an if statement. (Bug #328471)
 
 2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>
 
